Добавляет разметку главной страницы

--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
   <head>
     <meta charset="utf-8">
     <link rel="stylesheet" href="style.css">
-    <title>Интернет-магазин Device</title>
+    <title>Интернет-магазин "Device"</title>
   </head>
 
   <body>
@@ -53,13 +53,13 @@
 
 
     <main class="main-index">
-      <h1 class="visually-hidden">Интернет-магазин Device</h1>
+      <h1 class="visually-hidden">Интернет-магазин "Device"</h1>
 
       <section class="promo-products">
         <h2 class="visually-hidden">Продвижение товара</h2>
         <div class="promo-product">
           <div class="promo-product-image">
-            <img src="" alt="Квадрокоптер с мощным лазером, замаскированным под стандартную камеру">
+            <img src="" alt="Примеры товаров">
             <button class="promo-product-button promo-product-prev" type="button">
               <span class="visually-hidden">Предыдущее фото</span>
             </button>
@@ -75,12 +75,48 @@
             <a class="button" href="#">Подробнее</a>
             <ul class="promo-product-feature-list">
               <li class="promo-product-feature-item">
-                <b class="text text-radius">800 м</b>
-                <span class="text text-range">Дальность полёта</span>
+                <b class="text text-value">800 м</b>
+                <span class="text text-property">Дальность полёта</span>
               </li>
               <li class="promo-product-feature-item">
-                <b class="text text-radius">50 м</b>
-                <span class="text text-range">Радиус поражения</span>
+                <b class="text text-value">50 м</b>
+                <span class="text text-property">Радиус поражения</span>
+              </li>
+            </ul>
+          </div>
+
+          <div class="promo-product">
+            <span class="promo-product-number">02</span>
+            <b class="promo-product-title">Худеем правильно!</b>
+            <p class="text">Мотивирующие фитнес-браслеты помогут найти в себе силы не пропускать занятия и соблюдать
+              диету.</p>
+            <a class="button" href="#">Подробнее</a>
+            <ul class="promo-product-feature-list">
+              <li class="promo-product-feature-item">
+                <b class="text text-value">48 часов</b>
+                <span class="text text-property">Без подзарядки</span>
+              </li>
+            </ul>
+          </div>
+
+          <div class="promo-product">
+            <span class="promo-product-number">03</span>
+            <b class="promo-product-title">Делай селфи, как Бен Стиллер!</b>
+            <p class="text">Самая длинная палка для селфи доступна в нашем магазине. Восемь (Восемь, Карл!) метров
+              длиной и весом всего 5 кг.</p>
+            <a class="button" href="#">Подробнее</a>
+            <ul class="promo-product-feature-list">
+              <li class="promo-product-feature-item">
+                <b class="text text-value">8,5 м</b>
+                <span class="text text-property">Длина палки</span>
+              </li>
+              <li class="promo-product-feature-item">
+                <b class="text text-value">5 кг</b>
+                <span class="text text-property">Вес палки</span>
+              </li>
+              <li class="promo-product-feature-item">
+                <b class="text text-value">Карбон</b>
+                <span class="text text-property">Материал</span>
               </li>
             </ul>
           </div>
@@ -165,12 +201,14 @@
           </li>
           <li class="services-item">
             <h3 class="services-title">Гарантия</h3>
-            <p class="text">Гарантия...</p>
+            <p class="text">Если из-за возгорания купленного у нас товара у вас сгорит дом — не переживайте, мы выдадим
+              вам новый. Товар, не дом, конечно же.</p>
             <img class="services-image" src="" alt="Логотип сервиса Гарантия">
           </li>
           <li class="services-item">
             <h3 class="services-title">Кредит</h3>
-            <p class="text">Кредит...</p>
+            <p class="text">Залезть в долговую яму стало проще! Кредитные консультанты подберут для вас наиболее
+              выгодные условия кредита. Выгодные для банка, разумеется.</p>
             <img class="services-image" src="" alt="Логотип сервиса Кредит">
           </li>
         </ul>
