--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 
   <head>
     <meta charset="utf-8">
-    <link rel="stylesheet" href="style.css">
+    <!--<link rel="stylesheet" href="style.css">-->
     <title>Интернет-магазин "Device"</title>
   </head>
 
@@ -11,7 +11,7 @@
     <header class="page-header">
       <div class="page-header-row">
         <a class="logo" href="#">
-          <img class="logo-image" src="" alt="Логотип интернет-магазина Device">
+          <img class="logo-image" src="images/logo-black.svg" width="145"  height="36" alt="Логотип интернет-магазина Device">
         </a>
         <form class="page-header-row-form" action="https://echo.htmlacademy.ru/" method="post">
           <label>
@@ -59,7 +59,7 @@
         <h2 class="visually-hidden">Продвижение товара</h2>
         <div class="promo-product">
           <div class="promo-product-image">
-            <img src="" alt="Примеры товаров">
+            <img src="images/promo-products/slider-1.png" width="560"  height="560" alt="Примеры товаров">
             <button class="promo-product-button promo-product-prev" type="button">
               <span class="visually-hidden">Предыдущее фото</span>
             </button>
@@ -149,37 +149,37 @@
           <li class="products-categories-item">
             <a href="#">
               <h3 class="products-categories-title">Виртуальная реальность</h3>
-              <img class="products-categories-image" src="" alt="Товары категории Виртуальная реальность">
+              <img class="products-categories-image" src="images/products-categories/product-categorie-1.svg" width="160" height="160" alt="Товары категории Виртуальная реальность">
             </a>
           </li>
           <li class="products-categories-item">
             <a href="#">
               <h3 class="products-categories-title">Моноподы для селфи</h3>
-              <img class="products-categories-image" src="" alt="Товары категории Моноподы для селфи">
+              <img class="products-categories-image" src="images/products-categories/product-categorie-2.svg" width="160" height="160" alt="Товары категории Моноподы для селфи">
             </a>
           </li>
           <li class="products-categories-item">
             <a href="#">
               <h3 class="products-categories-title">Экшн-камеры</h3>
-              <img class="products-categories-image" src="" alt="Товары категории Экшн-камеры">
+              <img class="products-categories-image" src="images/products-categories/product-categorie-3.svg" width="160" height="160" alt="Товары категории Экшн-камеры">
             </a>
           </li>
           <li class="products-categories-item">
             <a href="#">
               <h3 class="products-categories-title">Фитнес-браслеты</h3>
-              <img class="products-categories-image" src="" alt="Товары категории Фитнес-браслеты">
+              <img class="products-categories-image" src="images/products-categories/product-categorie-4.svg" width="160" height="160" alt="Товары категории Фитнес-браслеты">
             </a>
           </li>
           <li class="products-categories-item">
             <a href="#">
               <h3 class="products-categories-title">Умные часы</h3>
-              <img class="products-categories-image" src="" alt="Товары категории Умные часы">
+              <img class="products-categories-image" src="images/products-categories/product-categorie-5.svg" width="160" height="160" alt="Товары категории Умные часы">
             </a>
           </li>
           <li class="products-categories-item">
             <a href="#">
               <h3 class="products-categories-title">Квадрокоптеры</h3>
-              <img class="products-categories-image" src="" alt="Товары категории Квадрокоптеры">
+              <img class="products-categories-image" src="images/products-categories/product-categorie-6.svg" width="160" height="160" alt="Товары категории Квадрокоптеры">
             </a>
           </li>
         </ul>
@@ -197,29 +197,29 @@
             <h3 class="services-title">Доставка</h3>
             <p class="text">Мы с удовольствием доставим ваш товар прямо к вашему подъезду совершенно бесплатно! Ведь мы
               неплохо заработаем, поднимая его на ваш этаж.</p>
-            <img class="services-image" src="" alt="Логотип сервиса Доставка">
+            <img class="services-image" src="images/services/service-1" width="136" height="164" alt="Логотип сервиса Доставка">
           </li>
           <li class="services-item">
             <h3 class="services-title">Гарантия</h3>
             <p class="text">Если из-за возгорания купленного у нас товара у вас сгорит дом — не переживайте, мы выдадим
               вам новый. Товар, не дом, конечно же.</p>
-            <img class="services-image" src="" alt="Логотип сервиса Гарантия">
+            <img class="services-image" src="images/services/service-2" width="171" height="195" alt="Логотип сервиса Гарантия">
           </li>
           <li class="services-item">
             <h3 class="services-title">Кредит</h3>
             <p class="text">Залезть в долговую яму стало проще! Кредитные консультанты подберут для вас наиболее
               выгодные условия кредита. Выгодные для банка, разумеется.</p>
-            <img class="services-image" src="" alt="Логотип сервиса Кредит">
+            <img class="services-image" src="images/services/service-3" width="156" height="188" alt="Логотип сервиса Кредит">
           </li>
         </ul>
       </section>
 
       <section class="advantage">
         <h2 class="visually-hidden">Доставка редкого товара под заказ</h2>
-        <img class="advantage-logo" src="" alt="Логотип Грузовая машина">
+        <img class="advantage-logo" src="images/avto.svg" width="47" height="31" alt="Логотип Грузовая машина">
         <p class="text text-advantage">Доставим редкий товар под заказ</p>
         <a class="advantage-link" href="">
-          <img class="advantage-information" src="" alt="Информация по доставке редкого товара под заказ">
+          <img class="advantage-information" src="images/icon-information.svg" width="40" height="40" alt="Информация по доставке редкого товара под заказ">
         </a>
       </section>
 
@@ -277,10 +277,10 @@
 
     <footer class="page-footer">
       <div class="footer-contacts">
-        <img class="footer-contacts-logo" src="" alt="Логотип интернет-магазина Device">
+        <img class="footer-contacts-logo" src="images/logo-yellow.svg" width="145"  height="36" alt="Логотип интернет-магазина Device">
         <address class="footer-contacts-address">
-          <p class="contacts-address-text contacts-address-text-footer">Санкт-Петербург, набережная реки Карповки, 5,
-            литера П.</p>
+          <span class="contacts-address-text contacts-address-text-footer">Санкт-Петербург, набережная реки Карповки, 5,
+            литера П.</span>
         </address>
       </div>
 
@@ -321,7 +321,7 @@
           <a class="contacts-phone contacts-phone-footer" href="tel:+78128121212">+7 812 812-12-12</a>
         </address>
         <a class="htmlacademy-link" href="https://htmlacademy.ru/">
-          <img src="" alt="Логотин HTML-академии">
+          <img src="images/logo-html-academy.svg" width="115"  height="33" alt="Логотин HTML-академии">
         </a>
       </div>
     </footer>
