--- a/product.html
+++ b/product.html
@@ -137,6 +137,7 @@
                 </form>
 
                 <section class="sorting">
+                  <!--тег acticle заменида на тег section. Получилось два section, вложенных друг в друга.-->
                     <h2>Сортировка:</h2>
                     <select class="select-control" aria-label="Сортировка">
                         <option value="popular">Популярные</option>
@@ -222,6 +223,7 @@
             <div class="footer-contacts">
                 <img class="footer-contacts-logo" src="images/logo-yellow.svg" width="145"  height="36" alt="Логотип интернет-магазина Device">
                 <address class="footer-contacts-address">
+                  <!--заменила тег p на тег span. Так лучше?-->
                     <span class="contacts-address-text contacts-address-text-footer">Санкт-Петербург, набережная реки
                         Карповки, 5,
                         литера П.</span>
