--- a/product.html
+++ b/product.html
@@ -11,7 +11,7 @@
 
 
     <header class="page-header">
-      <div class="container page-header-container">
+      <div class="page-header-container">
         <a class="logo" href="index.html">
           <svg width="145" height="36" fill="none" xmlns="http://www.w3.org/2000/svg">
             <path
@@ -24,11 +24,13 @@
         </a>
 
         <div class="user-menu">
-          <form class="user-menu-form" action="https://echo.htmlacademy.ru/" method="post">
-            <label>
-              <input type="search" name="search" placeholder="Поиск по сайту">
-            </label>
-            <button class="page-header-button" type="submit">Найти</button>
+          <div class="search-form">
+            <form action="https://echo.htmlacademy.ru/" method="post">
+              <label>
+                <input type="search" name="search" placeholder="Текст поиска">
+              </label>
+              <button class="page-header-button" type="submit">Найти</button>
+          </div>
           </form>
           <ul class="user-list">
             <li class="user-item">
@@ -66,184 +68,183 @@
     </header>
 
 
-    <main class="main-inner">
-      <header class="inner-header">
-        <h1 class="title">Моноподы для селфи</h1>
-        <ul class="breadcrumbs">
-          <li class="breadcrumbs-item">
-            <a class="text text-breadcrumbs" href="index.html">Главная</a>
-          </li>
-          <li class="breadcrumbs-item">
-            <a class="text text-breadcrumbs" href="catalog.html">Каталог товаров</a>
-          </li>
+    <main class="main-inner container">
+        <header class="inner-header">
+          <h1 class="title">Моноподы для селфи</h1>
+          <ul class="breadcrumbs">
+            <li class="breadcrumbs-item">
+              <a class="text text-breadcrumbs" href="index.html">Главная</a>
+            </li>
+            <li class="breadcrumbs-item">
+              <a class="text text-breadcrumbs" href="catalog.html">Каталог товаров</a>
+            </li>
 
-          <li class="breadcrumbs-item">
-            <a class="text text-breadcrumbs">Моноподы для селфи</a>
-          </li>
-        </ul>
-      </header>
+            <li class="breadcrumbs-item">
+              <a class="text text-breadcrumbs">Моноподы для селфи</a>
+            </li>
+          </ul>
+        </header>
 
-      <section class="product-filter">
-        <div class="container-catalog">
-          <div class="container-filter">
-            <h2 class="product-filter-title">Фильтр:</h2>
-            <form class="product-filter-form" action="https://echo.htmlacademy.ru/" method="get">
-              <fieldset class="product-filter-group">
-                <legend class="product-filter-group-title">Стоимость</legend>
-                <label><input type="range" min="0" max="5000" step="100"></label>
-              </fieldset>
+        <section class="container-product-filter">
 
-              <fieldset class="product-filter-group">
-                <legend class="product-filter-group-title">Цвет</legend>
-                <ul class="product-filter-list">
-                  <li class="product-filter-item">
-                    <label class="control">
-                      <input class="control-input" type="checkbox" name="product-color" value="black" checked>
-                      Черный
-                    </label>
-                  </li>
+          <div class="container-catalog">
+            <div class="filter">
+              <h2 class="product-filter-title">Фильтр:</h2>
+              <form class="product-filter-form" action="https://echo.htmlacademy.ru/" method="get">
+                <fieldset class="product-filter-group">
+                  <legend class="product-filter-group-title">Стоимость</legend>
+                  <label><input type="range" min="0" max="5000" step="100"></label>
+                </fieldset>
 
-                  <li class="product-filter-item">
-                    <label class="control">
-                      <input class="control-input" type="checkbox" name="product-color" value="white" checked>
-                      Белый
-                    </label>
-                  </li>
-                  <li class="product-filter-item">
-                    <label class="control">
-                      <input class="control-input" type="checkbox" name="product-color" value="blue">
-                      Синий
-                    </label>
-                  </li>
-                  <li class="product-filter-item">
-                    <label class="control">
-                      <input class="control-input" type="checkbox" name="product-color" value="red">
-                      Красный
-                    </label>
-                  </li>
-                  <li class="product-filter-item">
-                    <label class="control">
-                      <input class="control-input" type="checkbox" name="product-color" value="pink">
-                      Розовый
-                    </label>
-                  </li>
-                </ul>
-              </fieldset>
+                <fieldset class="product-filter-group">
+                  <legend class="product-filter-group-title">Цвет</legend>
+                  <ul class="product-filter-list">
+                    <li class="product-filter-item">
+                      <label class="control">
+                        <input class="control-input" type="checkbox" name="product-color" value="black" checked>
+                        Черный
+                      </label>
+                    </li>
 
-              <fieldset class="product-filter-group">
-                <legend class="product-filter-group-title">Bluetooth</legend>
-                <ul class="product-filter-list">
-                  <li class="product-filter-item">
-                    <label class="control">
-                      <input class="control-input" type="radio" name="bluetooth" checked>
-                      Есть
-                    </label>
-                  </li>
-                  <li class="product-filter-item">
-                    <label class="control">
-                      <input class="control-input" type="radio" name="bluetooth">
-                      Нет
-                    </label>
-                  </li>
-                </ul>
-              </fieldset>
-            </form>
-          </div>
+                    <li class="product-filter-item">
+                      <label class="control">
+                        <input class="control-input" type="checkbox" name="product-color" value="white" checked>
+                        Белый
+                      </label>
+                    </li>
+                    <li class="product-filter-item">
+                      <label class="control">
+                        <input class="control-input" type="checkbox" name="product-color" value="blue">
+                        Синий
+                      </label>
+                    </li>
+                    <li class="product-filter-item">
+                      <label class="control">
+                        <input class="control-input" type="checkbox" name="product-color" value="red">
+                        Красный
+                      </label>
+                    </li>
+                    <li class="product-filter-item">
+                      <label class="control">
+                        <input class="control-input" type="checkbox" name="product-color" value="pink">
+                        Розовый
+                      </label>
+                    </li>
+                  </ul>
+                </fieldset>
 
-          <section class="sorting">
-            <!--тег acticle заменида на тег section. Получилось два section, вложенных друг в друга.-->
-            <div class="container-sorting">
-              <h2 class="sorting-title">Сортировка:</h2>
-              <select class="text select-control" aria-label="Сортировка">
-                <option value="popular">Популярные</option>
-                <option value="cheap">Дешёвые</option>
-                <option value="expensive">Дорогие</option>
-              </select>
-
-              <button class="button-sort button-sort-up" type="button">
-                <span class="visually-hidden">По возрастанию</span></button>
-              <button class="button-sort button-sort-donw" type="button">
-                <span class="visually-hidden">По убыванию</span></button>
+                <fieldset class="product-filter-group">
+                  <legend class="product-filter-group-title">Bluetooth</legend>
+                  <ul class="product-filter-list">
+                    <li class="product-filter-item">
+                      <label class="control">
+                        <input class="control-input" type="radio" name="bluetooth" checked>
+                        Есть
+                      </label>
+                    </li>
+                    <li class="product-filter-item">
+                      <label class="control">
+                        <input class="control-input" type="radio" name="bluetooth">
+                        Нет
+                      </label>
+                    </li>
+                  </ul>
+                </fieldset>
+              </form>
             </div>
 
+            <section class="sorting">
+              <div class="container-sorting">
+                <h2 class="sorting-title">Сортировка:</h2>
+                <select class="text select-control" aria-label="Сортировка">
+                  <option value="popular">Популярные</option>
+                  <option value="cheap">Дешёвые</option>
+                  <option value="expensive">Дорогие</option>
+                </select>
 
-            <ul class="product-list">
-              <li class="product-card">
-                <a class="product-card-link" href="product.html">
-                  <img class="product-card-image" src="images/product/product-1.jpg" width="360" height="380"
-                    alt="Любительская селфи-палка">
-                  <h3 class="text product-card-title">Любительская <br> селфи-палка</h3>
-                  <span class="text product-card-price">500 ₽</span>
-                </a>
-              </li>
+                <button class="button-sort button-sort-up" type="button">
+                  <span class="visually-hidden">По возрастанию</span></button>
+                <button class="button-sort button-sort-donw" type="button">
+                  <span class="visually-hidden">По убыванию</span></button>
+              </div>
 
-              <li class="product-card">
-                <a class="product-card-link" href="product.html">
-                  <img class="product-card-image" src="images/product/product-2.jpg" width="360" height="380"" alt="
-                    Профессиональная селфи-палка">
-                  <h3 class="text product-card-title">Профессиональная <br> селфи-палка</h3>
-                  <span class="text product-card-price">1500 ₽</span>
-                </a>
-              </li>
 
-              <li class="product-card">
-                <a class="product-card-link" href="product.html">
-                  <img class="product-card-image" src="images/product/product-3.jpg" width="360" height="380"" alt="
-                    Непотопляемая селфи-палка">
-                  <h3 class="text product-card-title">Непотопляемая <br> селфи-палка</h3>
-                  <span class="text product-card-price">2500 ₽</span>
-                </a>
-              </li>
-
-              <li class="product-card">
-                <a class="product-card-link" href="product.html">
-                  <img class="product-card-image" src="images/product/product-4.jpg" width="360" height="380"" alt="
-                    Селфи-палка «Следуй за мной">
-                  <h3 class="text product-card-title">Селфи-палка «Следуй <br> за мной</h3>
-                  <span class="text product-card-price">1500 ₽</span>
-                </a>
-              </li>
-            </ul>
-            <button class="button product-card-button" type="submit">Загрузить ещё</button>
-
-            <div class="pagination">
-              <ul class="pagination-list">
-                <li class="pagination-item">
-                  <a class="pagination-link pagination-prev pagination-disabled">
-                    <span class="button">Назад</span>
+              <ul class="product-list">
+                <li class="product-card">
+                  <a class="product-card-link" href="product.html">
+                    <img class="product-card-image" src="images/product/product-1.jpg" width="360" height="380"
+                      alt="Любительская селфи-палка">
+                    <h3 class="text product-card-title">Любительская <br> селфи-палка</h3>
+                    <span class="text product-card-price">500 ₽</span>
                   </a>
                 </li>
-                <li class="pagination-item">
-                  <a class="text pagination-link pagination-current">1</a>
+
+                <li class="product-card">
+                  <a class="product-card-link" href="product.html">
+                    <img class="product-card-image" src="images/product/product-2.jpg" width="360" height="380"" alt="
+                      Профессиональная селфи-палка">
+                    <h3 class="text product-card-title">Профессиональная <br> селфи-палка</h3>
+                    <span class="text product-card-price">1500 ₽</span>
+                  </a>
                 </li>
-                <li class="pagination-item">
-                  <a class="text pagination-link" href="#">2</a>
+
+                <li class="product-card">
+                  <a class="product-card-link" href="product.html">
+                    <img class="product-card-image" src="images/product/product-3.jpg" width="360" height="380"" alt="
+                      Непотопляемая селфи-палка">
+                    <h3 class="text product-card-title">Непотопляемая <br> селфи-палка</h3>
+                    <span class="text product-card-price">2500 ₽</span>
+                  </a>
                 </li>
-                <li class="pagination-item">
-                  <a class="text pagination-link" href="#">3</a>
-                </li>
-                <li class="pagination-item">
-                  <a class="text pagination-link" href="#">...</a>
-                </li>
-                <li class="pagination-item">
-                  <a class="text pagination-link" href="#">15</a>
-                </li>
-                <li class="pagination-item">
-                  <a class="text pagination-link pagination-next" href="#">
-                    <span class="button">Вперёд</span>
+
+                <li class="product-card">
+                  <a class="product-card-link" href="product.html">
+                    <img class="product-card-image" src="images/product/product-4.jpg" width="360" height="380"" alt="
+                      Селфи-палка «Следуй за мной">
+                    <h3 class="text product-card-title">Селфи-палка «Следуй <br> за мной</h3>
+                    <span class="text product-card-price">1500 ₽</span>
                   </a>
                 </li>
               </ul>
-            </div>
+              <button class="button product-card-button" type="submit">Загрузить ещё</button>
 
-          </section>
-        </div>
-      </section>
+              <div class="pagination">
+                <ul class="pagination-list">
+                  <li class="pagination-item">
+                    <a class="pagination-link pagination-prev pagination-disabled">
+                      <span class="button">Назад</span>
+                    </a>
+                  </li>
+                  <li class="pagination-item">
+                    <a class="text pagination-link pagination-current">1</a>
+                  </li>
+                  <li class="pagination-item">
+                    <a class="text pagination-link" href="#">2</a>
+                  </li>
+                  <li class="pagination-item">
+                    <a class="text pagination-link" href="#">3</a>
+                  </li>
+                  <li class="pagination-item">
+                    <a class="text pagination-link" href="#">...</a>
+                  </li>
+                  <li class="pagination-item">
+                    <a class="text pagination-link" href="#">15</a>
+                  </li>
+                  <li class="pagination-item">
+                    <a class="text pagination-link pagination-next" href="#">
+                      <span class="button">Вперёд</span>
+                    </a>
+                  </li>
+                </ul>
+              </div>
+            </section>
+          </div>
+        </section>
     </main>
 
 
-    <footer class="page-footer">
-      <div class="container container-footer">
+    <footer class="container page-footer">
+      <div class="container-footer">
         <div class="footer-contacts footer-contacts-1">
           <div class="logo-footer">
             <svg width="145" height="36" fill="none" xmlns="http://www.w3.org/2000/svg">
