Декоративные элементы_доработка

--- a/index.html
+++ b/index.html
@@ -72,13 +72,10 @@
           </ul>
         </div>
 
-
-
         <nav class="navigation-menu">
           <ul class="navigation-list">
             <li class="navigation-item ">
               <a class="catalog-toggler" href="product.html"><span>Каталог товаров</span>
-
                 <svg class=" toggler toggler-plus" aria-hidden="true" focusable="false" width="50" height="50"
                   viewBox="0 0 50 50" fill="none" xmlns="http://www.w3.org/2000/svg">
                   <circle opacity="1" cx="25" cy="25" r="24" stroke="black" stroke-width="2" />
@@ -91,9 +88,6 @@
                     </clipPath>
                   </defs>
                 </svg>
-
-
-
                 <svg class="toggler toggler-minus" aria-hidden="true" focusable="false" width="50" height="51"
                   viewBox="0 0 50 51" fill="none" xmlns="http://www.w3.org/2000/svg">
                   <path
@@ -101,8 +95,6 @@
                     stroke="black" stroke-width="2" />
                   <path d="M33 24.787H17V26.787H33V24.787Z" fill="black" />
                 </svg>
-
-
               </a>
             </li>
             <li class="navigation-item ">
@@ -119,28 +111,21 @@
       </div>
     </header>
 
-
-
     <main class="main-index ">
       <h1 class="visually-hidden">Интернет-магазин "Device"</h1>
 
       <section class="container promo-products">
         <h2 class="visually-hidden">Продвижение товара</h2>
-
-
         <div class="promo-product-arrow">
           <button class="arrow arrow-prev" type="button">
             <svg aria-hidden="true" focusable="false" width="20" height="60" fill="none"
               xmlns="http://www.w3.org/2000/svg">
               <path d="M20 60h-3.5L0 30 16.5 0H20L3.8 30 20 60Z" fill="#000" />
             </svg>
-
-
-
             <span class="visually-hidden">Предыдущее фото</span>
           </button>
           <button class="arrow arrow-next" type="button">
-           <svg aria-hidden="true" focusable="false" width="20" height="60" fill="none"
+            <svg aria-hidden="true" focusable="false" width="20" height="60" fill="none"
               xmlns="http://www.w3.org/2000/svg">
               <path d="M0 0h3.5L20 30 3.5 60H0l16.2-30L0 0Z" fill="#000" />
             </svg>
@@ -242,8 +227,6 @@
         </div>
       </section>
 
-
-
       <section class="container products-categories">
         <h2 class="visually-hidden">Категория товаров</h2>
         <ul class="products-categories-list">
@@ -297,15 +280,10 @@
         <h2 class="visually-hidden">Доставка. Гарантия. Кредит</h2>
         <div class="container container-services">
           <div class="button-wrapper">
-
             <button class="button services-button services-button-current" type="button">Доставка</button>
-
             <button class="button services-button" type="button">Гарантия</button>
-
             <button class="button services-button" type="button">Кредит</button>
-
           </div>
-
           <ul class="services-list">
             <li class="services-item">
               <div class="services-text">
@@ -352,8 +330,6 @@
         </div>
       </section>
 
-
-
       <section class="container">
         <h2 class="visually-hidden">Доставка редкого товара под заказ</h2>
         <a class="advantage-link" href="">
@@ -373,9 +349,9 @@
             <p class="title title-advantage">Доставим редкий товар под заказ</p>
 
             <div class="icon-information">
-              <svg aria-hidden="true" focusable="false" width="2" height="12" fill="black"
+             <svg aria-hidden="true" focusable="false" width="2" height="12" fill="currentcolor"
                 xmlns="http://www.w3.org/2000/svg">
-                <g opacity="1" clip-path="url(#a)">
+                <g opacity="0.5" clip-path="url(#a)">
                   <path d="M2 0H0v2h2V0ZM2 4H0v8h2V4Z" />
                 </g>
                 <defs>
@@ -388,6 +364,45 @@
           </div>
         </a>
       </section>
+
+<!--
+      <section class="container">
+        <h2 class="visually-hidden">Доставка редкого товара под заказ</h2>
+        <div class="advantage">
+        <a class="advantage-link" href="">
+
+          <div class="advantage-image">
+              <svg aria-hidden="true" focusable="false" width="47" height="31" fill="none"
+                xmlns="http://www.w3.org/2000/svg">
+                <path
+                  d="m46.7 15.4-6.5-8.2c-.3-.4-.7-.6-1.2-.6h-8.3V1.5C30.7.7 30 0 29.2 0H1.5C.7 0 0 .7 0 1.5S.7 3 1.5 3h26.2v21.7H15.8c-.6-1.9-2.4-3.3-4.5-3.3-2.6 0-4.8 2.2-4.8 4.8 0 2.6 2.2 4.8 4.8 4.8 2.1 0 3.9-1.4 4.5-3.3h13.4c.8 0 1.5-.7 1.5-1.5V9.6h7.6l5.7 7.3v7.9h-2.2c-.6-1.9-2.4-3.3-4.5-3.3-2.6 0-4.8 2.2-4.8 4.8 0 2.6 2.1 4.8 4.8 4.8 2.1 0 3.9-1.4 4.5-3.3h3.7c.8 0 1.5-.7 1.5-1.5v-9.9c0-.4-.1-.7-.3-1ZM11.3 28c-1 0-1.8-.8-1.8-1.8s.8-1.8 1.8-1.8 1.8.8 1.8 1.8-.9 1.8-1.8 1.8Zm26.1 0c-1 0-1.8-.8-1.8-1.8s.8-1.8 1.8-1.8 1.8.8 1.8 1.8-.9 1.8-1.8 1.8Z"
+                  fill="#000" />
+                <path
+                  d="M19.4 9.6c.8 0 1.5-.7 1.5-1.5s-.7-1.5-1.5-1.5H4.8c-.8 0-1.5.7-1.5 1.5S4 9.6 4.8 9.6h14.6ZM17.7 14.7c0-.8-.7-1.5-1.5-1.5H1.5c-.8 0-1.5.7-1.5 1.5s.7 1.5 1.5 1.5h14.7c.8 0 1.5-.7 1.5-1.5Z"
+                  fill="#000" />
+              </svg>
+            </div>
+
+          <p class="title title-advantage">Доставим редкий товар под заказ</p>
+
+          <div class="icon-information">
+             <svg aria-hidden="true" focusable="false" width="2" height="12" fill="black"
+                xmlns="http://www.w3.org/2000/svg">
+                <g opacity="1" clip-path="url(#a)">
+                  <path d="M2 0H0v2h2V0ZM2 4H0v8h2V4Z" />
+                </g>
+                <defs>
+                  <clipPath id="a">
+                    <path fill="#fff" d="M0 0h2v12H0z" />
+                  </clipPath>
+                </defs>
+              </svg>
+          </div>
+
+        </a>
+        </div>
+      </section>
+    -->
 
       <section class="container container-contacts">
         <h2 class="visually-hidden">О нас. Контакты</h2>
